[package]
name = "factorygame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
bevy_rapier3d = { version = "0.21", features = ["simd-stable", "debug-render"] }
smooth-bevy-cameras = "0.8"
bevy_prototype_debug_lines = { version = "0.10", features = ["3d"] }
bevy-inspector-egui = "0.18"
bevy_obj = "0.10.0"
bevy_mod_raycast = "0.8.0"
lazy_static = "1.4.0"
bevy_mod_picking = "0.12.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/MinerSebas/bevy_lint", branch = "main" },
]
